--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@docusaurus/core": "^2.4.1",
     "@docusaurus/preset-classic": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
+    "@node-rs/jieba": "^1.10.0",
     "clsx": "^1.2.1",
+    "docusaurus-lunr-search": "^3.3.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
